# sentinel-mqtt

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
sentinel/: __init__.py
sentinel/broker/: config.py  retained.py  router.py  server.py  session.py
sentinel/ha/: cluster.py  heartbeat.py  replication.py
sentinel/protocol/: packets.py  reader.py  writer.py
tests/: test_ha.py  test_integration.py  test_protocol.py  test_router.py
